# demo_project3

./: .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.changelog.d/: 1.added.md
.github/: release-drafter.yml
.github/workflows/: release.yml  test_code.yml
changelog.d/: 1.fixed.md
docs/: _config.yml  api.rst
dp/: __init__.py  config.py
